compiler/test-data/parser/backend/errors/empty_backend.frel
module backend.errors.empty_backend

backend Empty { }
